# fastapi-boilerplate

./: .cursorrules  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  TRANSACTION_GUIDE.md  WARP.md  docker-compose.override.yaml  docker-compose.yaml  main.py  pyproject.toml
app/: docker-compose.override.yaml  main.py
app/api/: deps.py
app/api/v1/users/: routes.py  schema.py  views.py
app/core/: app.py  base_script.py  container.py  enums.py  logging.py  settings.py
app/core/db/: __init__.py  client.py  engine.py  model.py  utils.py
app/core/dependencies/: db.py
app/core/exceptions/: __init__.py  api.py
app/core/middlewares/: auth.py  logging.py  logging_middleware.py
app/core/schemas/: base.py
app/core/utils/: auth.py  encoders.py  token.py  user_agent.py
app/domain/transactions/: __init__.py  services.py
app/domain/users/: constants.py  entities.py  exceptions.py  models.py  repo.py  services.py  utils.py
app/domain/users/entities/: refresh_token_entities.py  user_entities.py
app/domain/users/repo/: refresh_token_repo_protocol.py  user_repo_protocol.py
app/infra/persistence/: db.py  user_repo.py
app/infra/persistence/models/: base.py  refresh_token.py  user.py
app/infra/persistence/repo_impl/: base.py  refresh_token_repo_impl.py  user.py  user_repo_impl.py
app/scripts/: base.py  create_admin_user.py
examples/: transaction_example.py
tests/api/: test_users_flow.py
tests/unit/: test_auth_backend.py  test_auth_middleware.py  test_token_utils.py  test_transaction_service.py  test_user_service.py
