[tool.poetry]
name = "fastapi-boilerplate"
version = "0.1.0"
description = ""
authors = ["Mehedee Siddique"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "~0.109.2"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
